--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2018"
 [dependencies]
 regex = "1"
 lazy_static = "1.4.0"
+serde_json = { version = "1.0", features = ["preserve_order"] }
